# optscan

./: .gitignore  README.md  optim.py  requirements.txt  scan_grid_example.ipynb  setup.cfg  setup.py
examples/: round_roi_optim.py
optscan/: __init__.py  optscan.py  scan_grid_example.ipynb  scan_grids.py  version.py
