[metadata]
name = optiscan
version = attr: src.VERSION
description = Tool to optimize scan trajectory
long_description = file: README
license = GNU General Public License, Version 3.0
classifiers =
    License :: GNU General Public License, Version 3.0
    Programming Language :: Python :: 3
	Topic :: Scientific/Engineering
	Topic :: Software Development
	Operating System :: Unix


[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
  ortools >= 7.2.6977
  matplotlib >= 3.1.1
  numpy >= 1.16.4

[options.package_data]
* = *.txt, *.rst
hello = *.msg
